--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,38 @@
-# Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Email spool folder
-/app/spool/*
+./.idea
 
-# Cache, session files and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-/var/sessions/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-!var/sessions/.gitkeep
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
 
-# Logs (Symfony4)
-/var/log/*
-!var/log/.gitkeep
+# testing
+/coverage
 
-# Parameters
-/app/config/parameters.yml
-/app/config/parameters.ini
+# next.js
+/.next/
+/out/
 
-# Managed by Composer
-/app/bootstrap.php.cache
-/var/bootstrap.php.cache
-/bin/*
-!bin/console
-!bin/symfony_requirements
-/vendor/
+# production
+/build
 
-# Assets and user uploads
-/web/bundles/
-/web/uploads/
+# misc
+.DS_Store
+*.pem
 
-# PHPUnit
-/app/phpunit.xml
-/phpunit.xml
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build data
-/build/
+# local env files
+.env*.local
 
-# Composer PHAR
-/composer.phar
+# vercel
+.vercel
 
-# Backup entities generated with doctrine:generate:entities command
-**/Entity/*~
-
-# Embedded web-server pid file
-/.web-server-pid
+# typescript
+*.tsbuildinfo
+next-env.d.ts
