--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "next": "14.2.33",
+    "next-intl": "^4.5.0",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
