--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-./.idea
-
+/.idea
+/existing_solutions
 # dependencies
 /node_modules
 /.pnp
